this current version has add/delete/edit in classDashboard. Also in Dashboard and classDashboard there is a option to turn on old timey font